--- a/resources/fxml/MainView.fxml
+++ b/resources/fxml/MainView.fxml
@@ -32,7 +32,7 @@
                <padding>
                   <Insets bottom="10.0" />
                </padding></Separator>
-            <Label onMouseClicked="#handleShowAllResidents" text="Beboere">
+            <Label onMouseClicked="#handleViewResidents" text="Beboere">
                <padding>
                   <Insets bottom="5.0" />
                </padding>
@@ -40,14 +40,13 @@
                   <Font size="14.0" />
                </font>
             </Label>
-            <Button maxWidth="130.0" mnemonicParsing="false" onAction="#handleShowAllResidents" text="Oversigt" />
-            <Button maxWidth="130.0" mnemonicParsing="false" onAction="#handleAddResident" text="Opret" />
+            <Button maxWidth="130.0" mnemonicParsing="false" onAction="#handleViewResidents" text="Oversigt" />
             <Separator layoutX="15.0" layoutY="239.0" prefWidth="200.0">
                <VBox.margin>
                   <Insets bottom="10.0" top="10.0" />
                </VBox.margin>
             </Separator>
-            <Label layoutX="67.0" layoutY="265.0" onMouseClicked="#handleAddGreenTask" text="Grønnehandlinger">
+            <Label layoutX="67.0" layoutY="265.0" onMouseClicked="#handleViewGreenTasks" text="Grønnehandlinger">
                <padding>
                   <Insets bottom="5.0" />
                </padding>
@@ -55,7 +54,7 @@
                   <Font size="14.0" />
                </font>
             </Label>
-            <Button layoutX="45.0" layoutY="139.0" maxWidth="130.0" mnemonicParsing="false" onAction="#handleAddGreenTask" text="Opret" />
+            <Button layoutX="45.0" layoutY="139.0" maxWidth="130.0" mnemonicParsing="false" onAction="#handleViewGreenTasks" text="Oversigt" />
             <Separator prefWidth="200.0">
                <VBox.margin>
                   <Insets bottom="10.0" top="10.0" />
