--- a/resources/fxml/ResidentsView.fxml
+++ b/resources/fxml/ResidentsView.fxml
@@ -59,6 +59,7 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <VBox.margin>
             <Insets top="15.0" />
@@ -71,14 +72,15 @@
                   <TableColumn fx:id="personalPointBalance" editable="false" prefWidth="100.0" text="Balance" />
                   <TableColumn fx:id="reservedBalance" editable="false" prefWidth="110.0" text="Reserved Balance" />
                   <TableColumn fx:id="pointBoosted" editable="false" prefWidth="100.0" text="Point Boosted" />
-              </columns>
+                  <TableColumn fx:id="status" editable="false" prefWidth="100.0" text="Status" />
+                                </columns>
             </TableView>
             <Label text="Beboer Oprettelse:" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
             </Label>
-            <TextField fx:id="nameTextField" alignment="CENTER" onKeyReleased="#handleNameKeyReleased" promptText="Navn" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER">
+            <TextField fx:id="nameTextField" alignment="CENTER" onKeyReleased="#handleNameKeyReleased" promptText="Navn" GridPane.halignment="CENTER" GridPane.rowIndex="5" GridPane.valignment="CENTER">
                <GridPane.margin>
                   <Insets left="5.0" right="5.0" />
                </GridPane.margin>
@@ -91,7 +93,48 @@
                   <Insets left="10.0" />
                </padding>
             </Label>
-            <Button fx:id="addNewResidentButton" mnemonicParsing="false" onAction="#handleAddNewResident" text="Opret" GridPane.halignment="CENTER" GridPane.rowIndex="5" GridPane.valignment="CENTER" />
+            <Button fx:id="addNewResidentButton" mnemonicParsing="false" onAction="#handleAddNewResident" text="Opret" GridPane.halignment="CENTER" GridPane.rowIndex="6" GridPane.valignment="CENTER" />
+            <Label text="Deaktiver beboer" GridPane.columnIndex="6" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font>
+            </Label>
+            <Button fx:id="deactivateResidentButton" disable="true" mnemonicParsing="false" onAction="#handleDeactivateResident" text="Deaktiver" GridPane.columnIndex="6" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
+            <Label text="Toggle Pointboost" GridPane.columnIndex="6" GridPane.halignment="CENTER" GridPane.rowIndex="5" GridPane.valignment="CENTER">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font>
+            </Label>
+            <Button fx:id="togglePointBoostButton" disable="true" mnemonicParsing="false" onAction="#handleTogglePointBoost" text="boost" GridPane.columnIndex="6" GridPane.halignment="CENTER" GridPane.rowIndex="6" GridPane.valignment="CENTER" />
+            <Label text="Ret navn" GridPane.columnIndex="6" GridPane.halignment="CENTER" GridPane.rowIndex="8" GridPane.valignment="CENTER">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font>
+            </Label>
+            <TextField fx:id="editNameTextField" alignment="CENTER" onKeyReleased="#handleEditNameKeyReleased" promptText="Navn" GridPane.columnIndex="6" GridPane.rowIndex="9">
+               <GridPane.margin>
+                  <Insets left="5.0" />
+               </GridPane.margin>
+            </TextField>
+            <Button fx:id="editNameButton" disable="true" mnemonicParsing="false" onAction="#handleEditName" text="Opdater" GridPane.columnIndex="6" GridPane.halignment="CENTER" GridPane.rowIndex="10" GridPane.valignment="CENTER" />
+            <Label text="Ret balance" GridPane.columnIndex="6" GridPane.halignment="CENTER" GridPane.rowIndex="12" GridPane.valignment="CENTER">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font>
+               <GridPane.margin>
+                  <Insets left="5.0" right="5.0" />
+               </GridPane.margin>
+            </Label>
+            <TextField fx:id="editNameTextField1" alignment="CENTER" onKeyReleased="#handleEditNameKeyReleased" promptText="Points" GridPane.columnIndex="6" GridPane.halignment="CENTER" GridPane.rowIndex="13" GridPane.valignment="CENTER">
+               <GridPane.margin>
+                  <Insets left="5.0" />
+               </GridPane.margin>
+            </TextField>
+            <Button fx:id="editBalanceButton" disable="true" mnemonicParsing="false" onAction="#handleEditBalance" text="Opdater" GridPane.columnIndex="6" GridPane.halignment="CENTER" GridPane.rowIndex="14" GridPane.valignment="CENTER">
+               <GridPane.margin>
+                  <Insets left="5.0" right="5.0" />
+               </GridPane.margin>
+            </Button>
          </children>
       </GridPane>
    </children>
