--- a/resources/fxml/ResidentsView.fxml
+++ b/resources/fxml/ResidentsView.fxml
@@ -125,7 +125,7 @@
                   <Insets left="5.0" right="5.0" />
                </GridPane.margin>
             </Label>
-            <TextField fx:id="editNameTextField1" alignment="CENTER" onKeyReleased="#handleEditNameKeyReleased" promptText="Points" GridPane.columnIndex="6" GridPane.halignment="CENTER" GridPane.rowIndex="13" GridPane.valignment="CENTER">
+            <TextField fx:id="editBalanceTextField" alignment="CENTER" onKeyReleased="#handleEditBalanceKeyReleased" promptText="Points" GridPane.columnIndex="6" GridPane.halignment="CENTER" GridPane.rowIndex="13" GridPane.valignment="CENTER">
                <GridPane.margin>
                   <Insets left="5.0" />
                </GridPane.margin>
