--- a/resources/fxml/DashboardView.fxml
+++ b/resources/fxml/DashboardView.fxml
@@ -1,21 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1720.0" spacing="10.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kloeverly.presentation.controllers.ResidentsViewController">
+<VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1080.0" prefWidth="1720.0" spacing="10.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kloeverly.presentation.controllers.DashboardViewController">
    <children>
-      <Label contentDisplay="CENTER" text="Beboer Oversigt">
+      <Label contentDisplay="CENTER" text="Kløverly">
          <font>
             <Font size="36.0" />
          </font>
@@ -65,76 +64,83 @@
             <Insets top="15.0" />
          </VBox.margin>
          <children>
-            <TableView fx:id="residentsTable" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.columnSpan="5" GridPane.rowIndex="1" GridPane.rowSpan="23">
+            <TableView fx:id="residentsTable" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="4" GridPane.columnSpan="3" GridPane.rowIndex="1" GridPane.rowSpan="15">
               <columns>
-                <TableColumn fx:id="ID" editable="false" minWidth="50.0" prefWidth="50.0" resizable="false" text="ID" />
-                <TableColumn fx:id="name" editable="false" minWidth="50.0" prefWidth="200.0" text="Name" />
+                <TableColumn fx:id="name" editable="false" minWidth="50.0" prefWidth="160.0" text="Name" />
                   <TableColumn fx:id="personalPointBalance" editable="false" prefWidth="100.0" text="Balance" />
                   <TableColumn fx:id="reservedBalance" editable="false" prefWidth="110.0" text="Reserved Balance" />
                   <TableColumn fx:id="pointBoosted" editable="false" prefWidth="100.0" text="Point Boosted" />
-                  <TableColumn fx:id="status" editable="false" prefWidth="100.0" text="Status" />
                                 </columns>
             </TableView>
-            <Label text="Beboer Oprettelse:" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+            <Label text="Seneste grønnegerninger" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
             </Label>
-            <TextField fx:id="nameTextField" alignment="CENTER" onKeyReleased="#handleNameKeyReleased" promptText="Navn" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER">
-               <GridPane.margin>
-                  <Insets left="5.0" right="5.0" />
-               </GridPane.margin>
-            </TextField>
-            <Label text="Navn:*" GridPane.rowIndex="3" GridPane.valignment="BOTTOM">
-               <font>
-                  <Font size="14.0" />
-               </font>
-               <padding>
-                  <Insets left="10.0" />
-               </padding>
-            </Label>
-            <Button fx:id="addNewResidentButton" mnemonicParsing="false" onAction="#handleAddNewResident" text="Opret" GridPane.halignment="CENTER" GridPane.rowIndex="5" GridPane.valignment="CENTER" />
-            <Label text="Deaktiver beboer" GridPane.columnIndex="6" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER">
+            <Label text="Fællesopgaver" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="16" GridPane.valignment="CENTER">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
             </Label>
-            <Button fx:id="deactivateResidentButton" disable="true" mnemonicParsing="false" onAction="#handleDeactivateResident" text="Deaktiver" GridPane.columnIndex="6" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
-            <Label text="Toggle Pointboost" GridPane.columnIndex="6" GridPane.halignment="CENTER" GridPane.rowIndex="5" GridPane.valignment="CENTER">
+            <Label text="Bytteopgaver" GridPane.columnIndex="5" GridPane.halignment="CENTER" GridPane.rowIndex="16" GridPane.valignment="CENTER">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
             </Label>
-            <Button fx:id="togglePointBoostButton" disable="true" mnemonicParsing="false" onAction="#handleTogglePointBoost" text="boost" GridPane.columnIndex="6" GridPane.halignment="CENTER" GridPane.rowIndex="6" GridPane.valignment="CENTER" />
-            <Label text="Ret navn" GridPane.columnIndex="6" GridPane.halignment="CENTER" GridPane.rowIndex="8" GridPane.valignment="CENTER">
+            <Label text="Beboer Oversigt" GridPane.columnIndex="5" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
             </Label>
-            <TextField fx:id="editNameTextField" alignment="CENTER" onKeyReleased="#handleEditNameKeyReleased" promptText="Navn" GridPane.columnIndex="6" GridPane.rowIndex="9">
-               <GridPane.margin>
-                  <Insets left="5.0" />
-               </GridPane.margin>
-            </TextField>
-            <Button fx:id="editNameButton" disable="true" mnemonicParsing="false" onAction="#handleEditName" text="Opdater" GridPane.columnIndex="6" GridPane.halignment="CENTER" GridPane.rowIndex="10" GridPane.valignment="CENTER" />
-            <Label text="Ret balance" GridPane.columnIndex="6" GridPane.halignment="CENTER" GridPane.rowIndex="12" GridPane.valignment="CENTER">
+            <Label text="Fællesskabspulje" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
                <font>
-                  <Font name="System Bold" size="14.0" />
+                  <Font name="System Bold" size="18.0" />
                </font>
                <GridPane.margin>
                   <Insets left="5.0" right="5.0" />
                </GridPane.margin>
             </Label>
-            <TextField fx:id="editBalanceTextField" alignment="CENTER" onKeyReleased="#handleEditBalanceKeyReleased" promptText="Points" GridPane.columnIndex="6" GridPane.halignment="CENTER" GridPane.rowIndex="13" GridPane.valignment="CENTER">
+            <TableView fx:id="greenTasksTable" prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="3" GridPane.rowIndex="1" GridPane.rowSpan="15">
+               <columns>
+                  <TableColumn fx:id="greenTasksTitle" editable="false" minWidth="50.0" prefWidth="109.0" text="Title" />
+                  <TableColumn fx:id="greenTasksDescription" editable="false" prefWidth="467.0" text="Beskrivelse" />
+                  <TableColumn fx:id="greenTasksPointValue" editable="false" prefWidth="71.0" text="Points" />
+                  <TableColumn fx:id="greenTasksCompletedDate" editable="false" prefWidth="66.0" text="Dato" />
+               </columns>
+            </TableView>
+            <Label fx:id="greenPointsLabel" alignment="CENTER" contentDisplay="CENTER" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+               <font>
+                  <Font name="System Bold" size="18.0" />
+               </font>
+            </Label>
+            <TableView fx:id="communityTasksTable" prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="3" GridPane.rowIndex="17" GridPane.rowSpan="9">
+               <columns>
+                  <TableColumn fx:id="communityTasksTitle" editable="false" minWidth="50.0" prefWidth="109.0" text="Title" />
+                  <TableColumn fx:id="communityTasksDescription" editable="false" prefWidth="339.0" text="Beskrivelse" />
+                  <TableColumn fx:id="communityTasksPointValue" editable="false" prefWidth="60.0" text="Points" />
+                  <TableColumn fx:id="communityTasksCreated" editable="false" prefWidth="73.0" text="Oprettet" />
+                  <TableColumn fx:id="communityTasksAssignedTo" editable="false" minWidth="0.0" prefWidth="132.0" text="Tildelt" />
+               </columns>
+            </TableView>
+            <TableView fx:id="exchangeTasksTable" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="4" GridPane.columnSpan="3" GridPane.rowIndex="17" GridPane.rowSpan="9">
+               <columns>
+                  <TableColumn fx:id="exchangeTasksTitle" editable="false" minWidth="50.0" prefWidth="109.0" text="Title" />
+                  <TableColumn fx:id="exchangeTasksDescription" editable="false" prefWidth="324.0" text="Beskrivelse" />
+                  <TableColumn fx:id="exchangeTasksPointValue" editable="false" prefWidth="60.0" text="Points" />
+                  <TableColumn fx:id="exchangeTasksCreated" editable="false" prefWidth="73.0" text="Oprettet" />
+                  <TableColumn fx:id="exchangeTasksOwner" editable="false" minWidth="0.0" prefWidth="142.0" text="Opgave Ejer" />
+               </columns>
+            </TableView>
+            <Label text="Events" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font>
+            </Label>
+            <ListView fx:id="eventsListView" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="5" GridPane.rowSpan="4">
                <GridPane.margin>
-                  <Insets left="5.0" />
+                  <Insets left="10.0" right="10.0" />
                </GridPane.margin>
-            </TextField>
-            <Button fx:id="editBalanceButton" disable="true" mnemonicParsing="false" onAction="#handleEditBalance" text="Opdater" GridPane.columnIndex="6" GridPane.halignment="CENTER" GridPane.rowIndex="14" GridPane.valignment="CENTER">
-               <GridPane.margin>
-                  <Insets left="5.0" right="5.0" />
-               </GridPane.margin>
-            </Button>
+            </ListView>
          </children>
       </GridPane>
    </children>
